[project]
name = "typesense-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "typesense>=2.0.0",
]
